<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    style="@style/layoutScreen"
    android:background="@color/white">

    <ImageView
        android:id="@+id/hero_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_screen"
        android:layout_marginTop="@dimen/margin_screen"
        android:padding="@dimen/margin_screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hero_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_screen"
        android:fontFamily="@font/roboto_black"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/tabs"
        app:layout_constraintStart_toEndOf="@id/hero_image"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_screen"
        android:background="@color/marvel_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hero_image"
        app:tabIndicatorColor="@color/marvel_red_darker"
        app:tabTextColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/series" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eventos" />
    </com.google.android.material.tabs.TabLayout>

    <TextView
        android:id="@+id/hero_description"
        style="@style/textViewDefault"
        android:layout_width="match_parent"
        android:justificationMode="inter_word"
        android:padding="@dimen/margin_screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs" />
</androidx.constraintlayout.widget.ConstraintLayout>