<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    style="@style/layoutScreen">

    <!-- HEADER -->

    <TextView
        android:id="@+id/txt_busca_marvel"
        style="@style/textViewHeader"
        android:fontFamily="@font/roboto_black"
        android:text="@string/busca_marvel"
        app:layout_constraintStart_toStartOf="@id/input_name"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="@dimen/header_line_width"
        android:layout_height="@dimen/header_line_height"
        android:background="@color/marvel_red"
        app:layout_constraintStart_toStartOf="@id/txt_busca_marvel"
        app:layout_constraintTop_toBottomOf="@id/txt_busca_marvel" />

    <TextView
        android:id="@+id/txt_teste_front"
        style="@style/textViewHeader"
        android:fontFamily="@font/roboto_light"
        android:text="@string/teste_front"
        app:layout_constraintStart_toEndOf="@id/txt_busca_marvel"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- SEARCH -->

    <TextView
        android:id="@+id/txt_nome_personagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_screen_medium"
        android:fontFamily="@font/roboto"
        android:text="@string/nome_personagem"
        android:textColor="@color/marvel_red"
        android:textSize="@dimen/header_font_size"
        app:layout_constraintStart_toStartOf="@id/input_name"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_search"
        android:layout_marginEnd="@dimen/margin_search"
        android:textSize="@dimen/header_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_nome_personagem" />

    <!-- LIST HEADER -->

    <View
        android:id="@+id/table_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_header_height"
        android:layout_marginTop="@dimen/margin_screen_small"
        android:background="@color/marvel_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/list_header_margin"
        android:fontFamily="@font/roboto"
        android:text="@string/nome"
        android:textColor="@color/white"
        android:textSize="@dimen/header_font_size"
        app:layout_constraintBottom_toBottomOf="@id/table_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/table_header" />

    <!-- LIST -->

    <ListView
        android:id="@+id/list"
        style="@style/list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table_header" />

    <View
        android:id="@+id/line_table_footer"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/marvel_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list" />

    <!-- PAGINATION -->

    <View
        android:id="@+id/background_footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/footer_height"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@id/line_footer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_page1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_previous_page"
        style="@style/whiteButton"
        android:layout_marginStart="@dimen/margin_screen"
        android:layout_marginEnd="@dimen/margin_screen"
        app:icon="@drawable/ic_baseline_arrow_left_24"
        app:layout_constraintBottom_toTopOf="@id/line_footer"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/roundButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_page1"
        style="@style/redButtonOutline"
        app:layout_constraintBottom_toTopOf="@id/line_footer"
        app:layout_constraintEnd_toStartOf="@id/btn_page2"
        app:layout_constraintStart_toEndOf="@id/btn_previous_page"
        app:shapeAppearanceOverlay="@style/roundButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_page2"
        style="@style/redButtonOutline"
        app:layout_constraintBottom_toTopOf="@id/line_footer"
        app:layout_constraintEnd_toStartOf="@id/btn_page3"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/btn_page1"
        app:shapeAppearanceOverlay="@style/roundButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_page3"
        style="@style/redButtonOutline"
        app:layout_constraintBottom_toTopOf="@id/line_footer"
        app:layout_constraintEnd_toStartOf="@id/btn_next_page"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/btn_page2"
        app:shapeAppearanceOverlay="@style/roundButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next_page"
        style="@style/whiteButton"
        android:layout_marginStart="@dimen/margin_screen"
        android:layout_marginEnd="@dimen/margin_screen"
        app:icon="@drawable/ic_baseline_arrow_right_24"
        app:layout_constraintBottom_toTopOf="@id/line_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearanceOverlay="@style/roundButton" />

    <View
        android:id="@+id/line_footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/footer_line_height"
        android:background="@color/marvel_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>